<resources>
    <string name="app_name">MobileAppDev</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="edit_txt_username_hint">"Tên đăng nhập"</string>
    <string name="edit_txt_password_hint">"Mật khẩu</string>
    <string name="edit_txt_re_password_hint">Nhập lại mật khẩu</string>
    <string name="edit_txt_email_hint">Email</string>
    <string name="edit_txt_phone_number_hint">Số điện thoại</string>
    <string name="edit_txt_address_hint">Địa chỉ</string>
    <string name="txt_view_forgot_password_hint"><u>Quên mật khẩu</u></string>
    <string name="btn_sign_in_hint">Đăng nhập</string>
    <string name="btn_sign_up_hint">Đăng ký</string>
    <string name="btn_facebook_login_hint">"Đăng nhập bằng Facebook"</string>
    <string name="txt_view_note_sign_up_hint">Chưa có tài khoản?</string>
    <string name="txt_view_sign_up_now_hint"><u>Đăng ký ngay</u></string>
    <string name="txt_view_note_sign_in_hint">Đã có tài khoản</string>
    <string name="txt_view_sign_in_now_hint"><u>Quay về đăng nhập</u></string>
    <string name="btn_recover_password_hint">Phục hồi mật khẩu</string>
    <string name="txt_view_title_sign_up">Đăng ký tài khoản</string>
    <string name="txt_view_birthday_title_sign_up">Sinh nhật</string>
    <string name="txt_view_address_title_sign_up">Địa chỉ</string>
    <string name="txt_view_note_above_policy_sign_up">Bằng việc nhấn vào nút Đăng ký, bạn đồng ý với</string>
    <string name="txt_view_policy_sign_up"><u>Điều khoản sử dụng</u></string>
    <string name="edit_txt_family_and_sur_name_hint_sign_up">Họ và tên lót</string>
    <string name="edit_txt_first_name_hint_sign_up">Tên</string>
    <string name="edit_txt_username_hint_sign_up">Tên đăng nhập</string>
    <string name="edit_txt_password_hint_sign_up">Mật khẩu</string>
    <string name="edit_txt_re_password_hint_sign_up">Nhập lại mật khẩu</string>
    <string name="edit_txt_email_hint_sign_up">Email</string>
    <string name="edit_txt_phone_number_hint_sign_up">Số điện thoại</string>
    <string name="edit_txt_address_street_hint_sign_up">Tên đường &amp; số nhà</string>
    <string name="edit_txt_address_ward_hint_sign_up">Phường</string>
    <string name="edit_txt_address_district_hint_sign_up">Quận</string>
    <string name="edit_txt_address_city_hint_sign_up">Tỉnh/Thành phố</string>
    <string name="edit_txt_birth_date_hint_sign_up">Ngày sinh</string>
    <string name="txt_view_title_edit_personal_info">Cập nhật thông tin</string>
    <string name="txt_view_basic_info_title_edit_personal_info">Thông tin cơ bản</string>
    <string name="txt_view_change_password_title_edit_personal_info">Đổi mật khẩu</string>
    <string name="txt_view_address_title_edit_personal_info">Địa chỉ</string>
    <string name="btn_edit_personal_info">Cập nhật</string>
    <string name="edit_txt_old_password_hint_edit_personal_info">Mật khẩu cũ</string>
    <string name="edit_txt_new_password_hint_edit_personal_info">Mật khẩu mới</string>
    <string name="edit_txt_re_new_password_hint_edit_personal_info">Nhập lại mật khẩu mới</string>
    <string name="edit_txt_address_street_hint_edit_personal_info">Tên đường &amp; số nhà</string>
    <string name="edit_txt_address_ward_hint_edit_personal_info">Phường</string>
    <string name="edit_txt_address_district_hint_edit_personal_info">Quận</string>
    <string name="edit_txt_address_city_hint_edit_personal_info">Tỉnh/Thành phố</string>
    <string name="txt_view_title_post_product">ĐĂNG SẢN PHẨM</string>
    <string name="txt_view_product_gallery_title_post_product">HÌNH ẢNH SẢN PHẨM (NẾU CÓ)</string>
    <string name="txt_view_product_avatar_title_post_product">ẢNH ĐẠI DIỆN SẢN PHẨM</string>
    <string name="txt_view_product_banner_title_post_product">BANNER</string>
    <string name="edit_txt_product_title_hint_post_product">Tiêu đề</string>
    <string name="edit_txt_product_price_hint_post_product">Giá mong muốn</string>
    <string name="edit_txt_product_short_description_hint_post_product">Nội dung mô tả ngắn gọn sản phẩm (tối đa 3 dòng)</string>
    <string name="edit_txt_product_full_description_hint_post_product">Nội dung mô tả chi tiết sản phẩm</string>
    <string name="txt_view_title_forgot_password">Quên mật khẩu</string>
    <string name="btn_send_mail_forgot_password_hint">Gửi mật khẩu mới qua mail</string>
    <string name="txt_view_note_above_forgot_password">
        "Chúng tôi sẽ gửi mật khẩu mới đến bạn thông qua địa chỉ mail mà bạn đã cung cấp trong lúc đăng ký tài khoản"
    </string>
    <string name="permission_title_rationale">Yêu cầu xác thực</string>
    <string name="permission_read_storage_rationale">Quyền được phép đọc vùng lưu trữ là cần thiết để truy xuất các tập tin</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="toast_cannot_retrieve_selected_image">Không thể truy xuất hình ảnh đã chọn</string>
    <string name="toast_unexpected_error">Lỗi không xác định</string>
    <string name="description_cropped_image">Hình sau khi được crop</string>
    <string-array name="navigation_drawer_title_array">
        <item>ĐIỀU HƯỚNG</item>
        <item>Trang chủ</item>
        <item>Thông tin của tôi</item>
        <item>Giỏ hàng</item>
        <item>CHỨC NĂNG</item>
        <item>Đăng sản phẩm</item>
        <item>Hỗ trợ</item>
        <item>Cài đặt</item>
        <item>Đăng xuất</item>
    </string-array>
    <string-array name="navigation_drawer_item_icon_array">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
    </string-array>
    <string-array name="category_title_array">
        <item>SÁCH BÁO</item>
        <item>THỰC PHẨM</item>
        <item>MỸ PHẨM</item>
        <item>ĐỒ ĐIỆN TỬ</item>
        <item>VĂN PHÒNG</item>
    </string-array>
    <string-array name="section_title_name_array">
        <item>MUA</item>
        <item>BÁN</item>
    </string-array>
    <string name="navigation_drawer_open">"Open"</string>
    <string name="navigation_drawer_close">"Close"</string>
    <string name="header_name">Dinh Nguyen</string>
    <string name="header_mail">nhudinh2103@gmail.com</string>
    <string name="first_tab_main_product_list_fragment">Mua &amp; Bán</string>
    <string name="second_tab_main_product_list_fragment">Bản Đồ</string>
    <string name="first_tab_grid_layout_product_list_fragment">Mua</string>
    <string name="second_tab_grid_layout_product_list_fragment">Bán</string>
    <string name="first_tab_personal_info_fragment">"MUA"</string>
    <string name="second_tab_personal_info_fragment">"BÁN"</string>
    <string name="third_tab_personal_info_fragment">GIỎ HÀNG</string>
    <string name="text_hint_default_search_view">Tìm kiếm</string>
    <string name="logo_text_default_search_view">Thanh tìm kiếm</string>
    <string name="logo_text_product_list_search_view">Tìm sản phẩm</string>
    <string name="logo_text_map_search_view">Lọc sản phẩm</string>
    <string name="text_hint_product_list_search_view">Nhập tên sản phẩm</string>
    <string name="text_hint_map_search_view">Chọn loại sản phẩm</string>
    <string name="string_logo">TextLogo</string>
    <string name="spinner_sort_text_hint_section_main_fragment">"Sắp xếp"</string>
    <string name="btn_call_product_detail_fragment_text">"GỌI ĐIỆN"</string>
    <string name="btn_add_bookmark_product_detail_fragment_text">"THÊM VÀO GIỎ"</string>
    <string name="txt_view_see_more_product_detail_fragment_text">"Đọc thêm"</string>
    <string name="txt_view_information_product_detail_fragment_text">THÔNG TIN</string>
    <string name="txt_view_view_in_map_product_detail_fragment_text">XEM TRÊN BẢN ĐỒ"</string>
    <string name="admin_username">"admin"</string>
    <string name="admin_password">"admin"</string>
    <string name="admin_token">"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOjEsImlzcyI6Imh0dHA6XC9cL2dvdmkuZXN5LmVzXC9hcGlcL2xvZ2luIiwiaWF0IjoxNDYyNzkxMzQ3LCJleHAiOjE0NjI3OTQ5NDcsIm5iZiI6MTQ2Mjc5MTM0NywianRpIjoiOTY4Y2JhYTVmMDRhMmYwMDIwZjgwZDcyYTI3NDdlZDYifQ.pDsO6gWfQu3ql6AOK6WDhjXIquoL-ymdgQZaDWR3c4k"</string>
    <string name="value_advance_search_option">"h1hBaLBV0AOItW4sO3vUQXCi8ENERjIizmLYJ6caPGMskqE4xLs8OqEDCvQLCp7"</string>
    <string name="crop_label">"Crop hình"</string>
    <string name="confirm_icon_title">Đồng ý thay đổi hình ?</string>
    <string name="exit_message">Bạn muốn thoát khỏi ứng dụng ư?</string>
    <string name="test_brief_description">"Một siêu phẩm chiến thuật 2016 từ Nhà sản xuất Võ Lâm TK danh tiếng - KINGSOFT"</string>
    <string name="test_other_description">"Sau khi ra mắt thành công Võ Lâm Truyền Kỳ, KingSoft đã dồn tâm huyết để xây dựng nên sản phẩm Búa Tạ - Cuộc chiến giữa Tương Lai và Quá Khứ, thuộc thể loại dàn trận chiến thuật hấp dẫn.
Người chơi sẽ nhập vai Thủ Lĩnh đi thu thập thẻ bài các Champ mạnh trải dài từ quá khứ đến hiện đại, từ thế giới manga, Marvel: Naruto, Ironman, Gundam, wolverine, ngộ không… đến các nhân vật Tam Quốc nổi tiếng, để xây dựng nên đế chế của mình.
Những màn PK liên server giữa các thủ lĩnh với nhau được thực hiện real – time, và quyết định thắng thua không chỉ còn là độ mạnh chiến lực, mà còn là sự phối Skill hợp lý (khống chế, khiêu khích, làm choáng, đẩy lùi, hoảng sợ…) của các Champ như trong thể loại Moba LOL nổi tiếng.
Một điểm đặc biệt của Búa Tạ, để chinh phục được tất cả các thử thách trong game, ngoài sở hữu những tướng lý tưởng, dàn trận chiến thuật độc đáo, người Thủ Lĩnh còn phải biết “thả” đúng lính, phối hợp sử dụng đúng đặc tính của hơn 20 loại lính tương khắc khác nhau của BÚA TẠ để có thể “sống sót” qua ải, tính năng độc đáo này tương tự như trò chơi thả lính chiến thuật Clash of clan, clash of royal nổi tiếng.
Kingsoft đã khéo léo phối hợp, lồng ghép một cách tinh tế các đặc tính ăn khách của những bom tấn khác:
•\tLối chơi dàn trận chiến thuật khuynh đảo của dota truyền kỳ,
•\tNét đặc trưng thả lính tinh tế của clash of clan, clash of royal, kết hợp cùng
•\tĐồ họa hiện đại, công nghệ PK real-time, hệ thống skill phong phú, tương quan – tương khắc lẫn nhau theo từng class (AD, AP, SP, Tank) như moba LOL
•\tNhững tính năng tinh túy một thời làm dậy sóng con tim và bàn phím các game thủ Việt của Võ Lâm Truyền Kỳ - KingSoft,
Tất cả những tinh hoa tạo nên một bom tấn của các bom tấn: BÚA TẠ. Chắc chắn không làm bạn thất vọng, dù là những game thủ khó tính nhất.
Các tính năng cực khủng và game mobile khác không có:
-	Tướng phân loại theo: Tank – Support – AD – AP tương tự moba LOL
-	Tính năng biến hình tướng khi nâng cấp.
-	Hệ thống Trang bị cánh dễ thương nhất vũ trụ.
-	Thả lính để ứng biến, xoay chuyển thế trận như Clash of clan, clash of royal
Và các tính năng HOT khác:
-	Bang hội chiến.
-	Boss Thế Giới.
-	Và hàng ngàn tính năng khác.
-	Đấu trường PK liên server – Tranh tài trí tuệ.
-	Đốt lửa trại cùng bạn bè.
-	Cây ước nguyện, cầu nguyện toàn server.
Hãy cài đặt và tận hưởng!"</string>
</resources>