<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/sign_in_fragment_horizontal_margin"
        android:layout_marginRight="@dimen/sign_in_fragment_horizontal_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/btnSendPasswordToEmail_ContentBotForgotPasswordSingleFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_fragment_edit_text_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="170dp"
            android:background="@drawable/gradient_btn_sign_in"
            android:gravity="center"
            android:hint="@string/btn_send_mail_forgot_password_hint"
            android:textColorHint="@color/white"/>

        <LinearLayout
            android:id="@+id/layoutEmail_ContentBotForgotPasswordSingleFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_fragment_edit_text_height"
            android:layout_above="@id/btnSendPasswordToEmail_ContentBotForgotPasswordSingleFragment"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="@dimen/sign_in_fragment_edit_text_height"
                android:layout_height="@dimen/sign_in_fragment_edit_text_height"
                android:background="@color/sign_up_edit_text_background">

                <ImageView
                    android:id="@+id/imageViewEmail_ContentBotForgotPasswordSingleFragment"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_email"/>
            </FrameLayout>

            <EditText
                android:id="@+id/editTxtEmail_ContentBotForgotPasswordSingleFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/sign_up_edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/edit_txt_email_hint"
                android:inputType="textEmailAddress"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="12dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/sign_up_edit_text_hint"
                android:textSize="13sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutUsername_ContentBotForgotPasswordSingleFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_fragment_edit_text_height"
            android:layout_above="@id/layoutEmail_ContentBotForgotPasswordSingleFragment"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="@dimen/sign_in_fragment_edit_text_height"
                android:layout_height="@dimen/sign_in_fragment_edit_text_height"
                android:background="@color/sign_up_edit_text_background">

                <ImageView
                    android:id="@+id/imageViewUsername_ContentBotForgotPasswordSingleFragment"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_username_sign_in"/>
            </FrameLayout>

            <EditText
                android:id="@+id/editTxtUsername_ContentBotForgotPasswordSingleFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/sign_up_edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/edit_txt_username_hint"
                android:inputType="textPersonName"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="12dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/sign_up_edit_text_hint"
                android:textSize="13sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtViewNoteAboveUsername_ContentBotForgotPasswordSingleFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layoutUsername_ContentBotForgotPasswordSingleFragment"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_view_note_above_forgot_password"
            android:textSize="12sp"/>

    </RelativeLayout>

</RelativeLayout>